objects/vlocity_cmt__VlocityStateTransition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>vlocity_cmt__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>VlocityStateTransition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateModelVersionId__c</fullName>
        <label>Vlocity State Model Version</label>
        <referenceTo>vlocity_cmt__VlocityStateModelVersion__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>Vlocity_State_Transition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>vlocity_cmt__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition (To)</relationshipLabel>
        <relationshipName>ToState</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity State Transition</label>
    <nameField>
        <label>Vlocity State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>